--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scorchpoint-theme",
+  "name": "portfolio",
   "version": "1.1.0",
   "description": "",
   "main": "js/scripts.js",
@@ -10,12 +10,13 @@
     "portfolio",
     "personal",
     "website",
-	"tech",
-	"coding"
+    "tech",
+    "coding"
   ],
-  "author": "Ryan Fitzgerald",
+  "author": "Patrick Artounian",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-plumber": "^1.1.0",
